--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "nodemon ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "datejs": "^1.0.0-rc3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
